<resources>
    <string name="app_name">CarPool</string>
    <string name="LOG_IN">Log in</string>
    <string name="SIGN_UP">Sign up</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="rePassword">retype Password</string>
    <string name="Name">Name</string>
    <string name="Source">Pick up</string>
    <string name="Destination">Drop off</string>
    <string name="college">Heading to college</string>
    <string name="home">Heading home</string>
    <string name="recycler_title">Available routes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carnumber">car number</string>
    <string name="Date">Date of ride</string>
    <string name="Confirmation">Ride Confirmation</string>
    <string name="SourceC">your Pick up ride from</string>
    <string name="DestinationC">Drop off to gate </string>
    <string name="carnumberc">car number</string>
    <string name="DateC">Date </string>
    <string name="RideConfirm">Confirm </string>
    <string name="RideCancel">Cancel </string>
    <string name="Total">your total is 50LE </string>
    <string name="Logout">Log out </string>
    <string name="recycler_Cart"> Cart</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="Time_disable">Time constraint</string>
    <string name="history">History</string>
</resources>