<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/grey"
    android:elevation="8dp"
    android:padding="3dp"
    app:circularflow_radiusInDP="20dp"
    >

    <TextView
        android:id="@+id/textView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Source"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/divider01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="6dp"
        android:text="@string/carnumber"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView07"
        app:layout_constraintEnd_toStartOf="@+id/divider01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="4dp"
        android:text="@string/Destination"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/divider01"
        app:layout_constraintTop_toBottomOf="@+id/divider02" />

    <TextView
        android:id="@+id/textView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView05" />

    <View
        android:id="@+id/divider01"
        android:layout_width="2dp"
        android:layout_height="70dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/textView05"
        app:layout_constraintEnd_toStartOf="@+id/divider02"
        app:layout_constraintStart_toEndOf="@+id/textView05"
        app:layout_constraintTop_toBottomOf="@+id/textView05"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider02"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="11dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView06"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider01"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>